tests/fail/nightly/missing_trait_regex.stderr
error[E0277]: the trait bound `NoRegex: RegexRepresentation` is not satisfied
  --> tests/fail/nightly/missing_trait_regex.rs:12:33
   |
12 |     sscanf::sscanf!("hi", "{}", module::NoRegex);
   |                                 ^^^^^^^^^^^^^^^ the trait `RegexRepresentation` is not implemented for `NoRegex`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             FullF32
             FullF64
             HexNumber
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
           and $N others

error[E0277]: the trait bound `NoRegex: RegexRepresentation` is not satisfied
  --> tests/fail/nightly/missing_trait_regex.rs:13:29
   |
13 |     sscanf::sscanf!("hi", "{module::NoRegex}");
   |                             ^^^^^^^^^^^^^^^ the trait `RegexRepresentation` is not implemented for `NoRegex`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             FullF32
             FullF64
             HexNumber
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
           and $N others

error[E0277]: the trait bound `NoRegex: RegexRepresentation` is not satisfied
  --> tests/fail/nightly/missing_trait_regex.rs:15:33
   |
15 |     sscanf::sscanf!("hi", "{}", NoRegex);
   |                                 ^^^^^^^ the trait `RegexRepresentation` is not implemented for `NoRegex`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             FullF32
             FullF64
             HexNumber
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
           and $N others

error[E0277]: the trait bound `NoRegex: RegexRepresentation` is not satisfied
  --> tests/fail/nightly/missing_trait_regex.rs:16:29
   |
16 |     sscanf::sscanf!("hi", "{NoRegex}");
   |                             ^^^^^^^ the trait `RegexRepresentation` is not implemented for `NoRegex`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             FullF32
             FullF64
             HexNumber
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
           and $N others

error[E0277]: the trait bound `NoRegex: RegexRepresentation` is not satisfied
  --> tests/fail/nightly/missing_trait_regex.rs:24:47
   |
24 | struct TestMapParamNoScanf(#[sscanf(map = |x: module::NoRegex| { x.0 })] u8);
   |                                               ^^^^^^^^^^^^^^^ the trait `RegexRepresentation` is not implemented for `NoRegex`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             FullF32
             FullF64
             HexNumber
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
           and $N others
